# Nebula

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Nebula/: CMakeLists.txt
Nebula/cmake/: configure-engine.cmake  setup-libraries.cmake
Nebula/include/: Nebula.h  OpenGLConfiguration.h.in  nebula_pch.h
Nebula/include/core/: Application.h  Assert.h  Config.h  Core.h  EntryPoint.h  Input.h  InputCodes.h  Layer.h  LayerStack.h  Logging.h  Timer.h  Timestep.h  Types.h  UpdateContext.h  Window.h
Nebula/include/debug/: ImGuiBackend.h  ImGuiLayer.h
Nebula/include/events/: ApplicationEvents.h  Event.h  EventManager.h  KeyboardEvents.h  MouseEvents.h
Nebula/include/memory/: Allocators.h  MemoryChunk.h  MemoryManager.h  Types.h  Wrappers.h
Nebula/include/platform/: DetectPlatform.h  EngineConfiguration.h.in  PlatformAPI.h
Nebula/include/platform/OpenGL/: OpenGLCommandsVisitor.h  OpenGLConfiguration.h.in  OpenGLContext.h  OpenGLFramebuffer.h  OpenGLImGuiBackend.h  OpenGLImGuiLayer.h  OpenGLRecordedBuffer.h  OpenGLRendererAPI.h  OpenGLShader.h
Nebula/include/platform/Vulkan/: VulkanAPI.h  VulkanAttachmentInfo.h  VulkanCommandPool.h  VulkanCommandsVisitor.h  VulkanConfiguration.h.in  VulkanContext.h  VulkanFramebuffer.h  VulkanImGuiBackend.h  VulkanImGuiLayer.h  VulkanPipeline.h  VulkanRecordedBuffer.h  VulkanRenderPass.h  VulkanRenderPassExecutor.h  VulkanRendererAPI.h  VulkanShader.h  VulkanSwapchain.h  VulkanTextureFormats.h
Nebula/include/platform/Windows/: WindowsInput.h  WindowsWindow.h
Nebula/include/renderer/: AttachmentInfo.h  Frame.h  Framebuffer.h  GraphicsPipelineState.h  PipelineState.h  RenderCommand.h  RenderCommandBuffer.h  RenderCommandPool.h  RenderContext.h  RenderManager.h  RenderPass.h  Renderer.h  RendererAPI.h  RendererBackend.h  RendererCommands.h
Nebula/include/renderer/commands/: RenderCommandBuffer.h  RenderCommandVisitor.h
Nebula/include/renderer/utils/: RenderPassTemplates.h  RendererCommands.h
Nebula/include/rendering/: AttachmentInfo.h  CachedPipelineState.h  Framebuffer.h  PipelineState.h  PipelineStateCache.h  RenderContext.h  RenderObject.h  RenderObjectVisitor.h  RenderPass.h  Shader.h  TextureFormats.h
Nebula/include/rendering/commands/: DrawRenderCommands.h  RenderCommand.h  RenderCommandBuffer.h  RenderCommandVisitor.h  RenderPassCommands.h
Nebula/include/rendering/renderer/: ForwardRendererBackend.h  Renderer.h  RendererAPI.h  RendererBackend.h
Nebula/include/rendering/renderpass/: RenderPass.h  RenderPassExecutor.h  RenderPassObjects.h
Nebula/include/threads/: BlockingQueue.h  MainRenderThread.h  MainUpdateThread.h  RenderThread.h  SecondaryThread.h  UpdateThread.h
Nebula/include/utility/: Filesystem.h  Handle.h  ObjectCacheManager.h
Nebula/resources/shaders/vulkan/: final_pass.frag  final_pass.vert
Nebula/src/: Nebula.h
Nebula/src/Engine/: Application.cpp  Application.h  EntryPoint.h  Logger.cpp  Logger.h  NebulaAPI.h
Nebula/src/core/: Application.cpp  Application.h  Config.cpp  EntryPoint.h  LayerStack.cpp  Logging.cpp  Timer.cpp  Window.cpp
Nebula/src/debug/: ImGuiLayer.cpp
Nebula/src/events/: EventManager.cpp
Nebula/src/memory/: Allocators.cpp  MemoryChunk.cpp  MemoryManager.cpp
Nebula/src/platform/: DetectPlatform.cpp
Nebula/src/platform/OpenGL/: OpenGLCommandsVisitor.cpp  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLImGuiBackend.cpp  OpenGLImGuiLayer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp
Nebula/src/platform/Vulkan/: VulkanAPI.cpp  VulkanCommandPool.cpp  VulkanCommandsVisitor.cpp  VulkanContext.cpp  VulkanFramebuffer.cpp  VulkanImGuiBackend.cpp  VulkanImGuiLayer.cpp  VulkanPipeline.cpp  VulkanRecordedBuffer.cpp  VulkanRenderPass.cpp  VulkanRenderPassExecutor.cpp  VulkanRendererAPI.cpp  VulkanShader.cpp  VulkanSwapchain.cpp
Nebula/src/platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp
Nebula/src/renderer/: ForwardRendererBackend.cpp  Framebuffer.cpp  RenderCommandBuffer.cpp  RenderManager.cpp  RenderPass.cpp  Renderer.cpp  RendererAPI.cpp  RendererBackend.cpp
Nebula/src/rendering/: CachedPipelineState.cpp  Framebuffer.cpp  PipelineState.cpp  PipelineStateCache.cpp  RenderCommandBuffer.cpp  RenderPass.cpp  RenderPassExecutor.cpp  RenderPassObjects.cpp  Renderer.cpp  RendererAPI.cpp  RendererBackend.cpp  Shader.cpp
Nebula/src/threads/: MainRenderThread.cpp  MainUpdateThread.cpp  RenderThread.cpp  SecondaryThread.cpp  UpdateThread.cpp
Nebula/src/utility/: Filesystem.cpp
Sandbox/: CMakeLists.txt  main.cpp
sandbox/: CMakeLists.txt  app.cpp
